--- a/package.json
+++ b/package.json
@@ -1,26 +1,20 @@
 {
-  "name": "twitch",
+  "name": "lowdb-demo",
   "version": "0.0.1",
-  "description": "A simple Node app built on Express, instantly up and running.",
+  "description": "Example app showing use of Lowdb",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.16.4",
-    "cross-fetch": "^3.0.1",
-    "cors": "^2.8.5"
+    "express": "^4.12.4",
+    "lowdb": "1.x"
   },
-  "engines": {
-    "node": "10.15.0"
-  },
-  "repository": {
-    "url": "https://glitch.com/edit/#!/hello-express"
-  },
-  "license": "MIT",
+  "engines": { "node": "6.x" }, 
   "keywords": [
     "node",
-    "glitch",
-    "express"
-  ]
+    "express",
+    "lowdb"
+  ],
+  "license": "MIT"
 }
